audit improvements and separated page audit from domain audit for more heirarchy