@@ -29,8 +29,6 @@ import com.qanairy.models.enums.AuditLevel;
 import com.qanairy.models.enums.AuditName;
 import com.qanairy.models.enums.AuditSubcategory;
 import com.qanairy.models.enums.Priority;
-import com.qanairy.services.BrowserService;
-import com.qanairy.services.ElementStateService;
 import com.qanairy.services.ObservationService;
 import com.qanairy.services.PageStateService;
 import com.qanairy.utils.BrowserUtils;
@@ -43,20 +41,15 @@ public class LinksAudit implements IExecutablePageStateAudit {
 	@SuppressWarnings("unused")
 	private static Logger log = LoggerFactory.getLogger(LinksAudit.class);
 	
+	private static final int MAX_POINTS_EACH = 5;
+	
 	@Autowired
 	private ObservationService observation_service;
 	
 	@Autowired
 	private PageStateService page_state_service;
 	
-	@Autowired
-	private ElementStateService element_state_service;
 	
-	private List<ElementState> links_without_href_attribute =  new ArrayList<>();
-	private List<ElementState> links_without_href_value =  new ArrayList<>();
-	private List<ElementState> invalid_links = new ArrayList<>();
-	private List<ElementState> dead_links = new ArrayList<>();
-	private List<ElementState> non_labeled_links = new ArrayList<>();
 
 	public LinksAudit() {
 		//super(buildBestPractices(), getAdaDescription(), getAuditDescription(), AuditSubcategory.LINKS);
@@ -74,10 +67,18 @@ public class LinksAudit implements IExecutablePageStateAudit {
 	@Override
 	public Audit execute(PageState page_state) {
 		assert page_state != null;
+		
+		List<ElementState> links_without_href_attribute =  new ArrayList<>();
+		List<ElementState> links_without_href_value =  new ArrayList<>();
+		List<ElementState> invalid_links = new ArrayList<>();
+		List<ElementState> dead_links = new ArrayList<>();
+		List<ElementState> non_labeled_links = new ArrayList<>();
 	
 		//List<ElementState> link_elements = page_state_service.getLinkElementStates(user_id, page_state.getKey());
 		List<ElementState> link_elements = new ArrayList<>();
-		for(ElementState element : page_state_service.getElementStates(page_state.getKey())) {
+		List<ElementState> elements = page_state_service.getElementStates(page_state.getKey());
+		
+		for(ElementState element : elements) {
 			if(element.getName().equalsIgnoreCase("a")) {
 				link_elements.add(element);
 			}
@@ -88,39 +89,34 @@ public class LinksAudit implements IExecutablePageStateAudit {
 		List<Observation> observations = new ArrayList<>();
 		//score each link element
 		int score = 0;
-		for(ElementState link : link_elements) {
-			
+		for(ElementState link : link_elements) {			
 			Document jsoup_doc = Jsoup.parseBodyFragment(link.getOuterHtml(), page_state.getUrl());
 			Element element = jsoup_doc.getElementsByTag("a").first();
-		
-			//String href = link.getAttribute("href");
+
 			if( element.hasAttr("href") ) {
 				score++;
 			}
 			else {
+				
 				links_without_href_attribute.add(link);
 				continue;
 			}
-			String href = element.absUrl("href");
-
+			String href = element.attr("href");
+			
+			log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
+			log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
+			log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
+			log.warn("actual href value :: "+element.attr("href"));
+			log.warn("href as absolute url :: "+href);
 			//if href is a mailto link then give score full remaining value and continue
 			if(href.startsWith("mailto:")) {
-				score += 5;
+				score += 4;
 				continue;
 			}
 			
 			//does element have an href value?
 			if(href != null && !href.isEmpty()) {
-				
 				score++;
-				try {
-					URI uri = new URI(href);
-					if(!uri.isAbsolute()) {
-						href = page_state.getUrl() + href;
-					}
-				} catch (URISyntaxException e) {
-					e.printStackTrace();
-				}
 			}
 			else {
 				links_without_href_value.add(link);
@@ -128,17 +124,58 @@ public class LinksAudit implements IExecutablePageStateAudit {
 			}
 			
 			//is element link a valid url?
-			URL url_href = null;
 			try {
-				url_href = new URL(href);
+				log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
+				log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
+				log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
+				log.warn("href before check :: "+href);
+				
+				log.warn("does href start with relative indicator :: " + (href.startsWith("/") || href.startsWith("../")));
+				
+				URI uri = new URI(href);
+				log.warn("is href absolute? :: "+uri.isAbsolute());
+				if(!uri.isAbsolute()) {
+					URL page_url = new URL(BrowserUtils.sanitizeUrl(page_state.getUrl()));
+					log.warn("URI is not absolute :: "+href);
+					href.replaceAll("../", "");
+					if(href.startsWith("/") && href.length() > 1) {
+						log.warn("href starts with a '/'  :: "+href);
+						href = href.substring(1);
+					}
+					else if(href.strip().contentEquals("/")) {
+						href = "";
+					}
+					href = page_url.getHost() + "/" + href;
+					log.warn("new href 1 :: "+href);
+
+				}
+			
+				log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
+				log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
+				log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
+				//if starts with / then append host
+			
 				score++;
 			} catch (MalformedURLException e) {
+				invalid_links.add(link);
+				e.printStackTrace();
+			} catch (URISyntaxException e) {
 				invalid_links.add(link);
 				e.printStackTrace();
 			}
 			
 			//Does link have a valid URL? yes(1) / No(0)
 			try {
+				log.warn("href before building URL object :: "+href);
+
+				URL url_href = new URL(BrowserUtils.sanitizeUrl(href));
+
+				log.warn("url href object :: "+url_href.toString());
+
+				log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
+				log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
+				log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
+				
 				if(BrowserUtils.doesUrlExist(url_href)) {
 					score++;
 				}
@@ -150,20 +187,13 @@ public class LinksAudit implements IExecutablePageStateAudit {
 				e.printStackTrace();
 			}
 			
-			log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
-			log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
-			
 			//Does link contain a text label inside it
 			 if(!link.getAllText().isEmpty()) {
-				 log.warn("link has text.................");
 				 score++;
 			 }
 			 else {
 				 boolean element_includes_text = false;
-				 log.warn("link xpath :: " + link.getXpath());
-				 List<ElementState> element_states = element_state_service.getChildElements( page_state.getKey(), link.getXpath() );
-				 log.warn("# of child elements :: " + element_states.size());
-				 log.warn("link outerhtml  ::   " + link.getOuterHtml());
+				// List<ElementState> element_states = element_state_service.getChildElements( page_state.getKey(), link.getXpath() );
 				 //check each child element. if element is an image and does not include text then add link to non labeled links
 				 //for(ElementState child_element : element_states) {
 				//	 if("img".contentEquals(child_element.getName())) {
@@ -176,7 +206,6 @@ public class LinksAudit implements IExecutablePageStateAudit {
 							log.warn("image text list :: "+image_text_list.size());
 							
 							for(String text : image_text_list) {
-								log.warn("text value :: "+text);
 								if(text != null && !text.isEmpty()) {
 									element_includes_text = true;
 								}
@@ -200,8 +229,6 @@ public class LinksAudit implements IExecutablePageStateAudit {
 					 score++;
 				 }
 			}
-			 log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
-			 log.warn("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++");
 			 
 			//TODO : Does link have a hover styling? yes(1) / No(0)
 			
@@ -253,7 +280,7 @@ public class LinksAudit implements IExecutablePageStateAudit {
 			
 			ElementStateObservation observation = new ElementStateObservation(
 															links_without_href_value, 
-															"Links without empty 'href' values", 
+															"Links with empty 'href' values", 
 															why_it_matters, 
 															ada_compliance, 
 															Priority.HIGH,
@@ -290,7 +317,8 @@ public class LinksAudit implements IExecutablePageStateAudit {
 														ada_compliance, 
 														Priority.HIGH,
 														recommendations,
-														labels, null);
+														labels,
+														categories);
 			
 			observations.add(observation_service.save(observation));
 		}
@@ -306,7 +334,8 @@ public class LinksAudit implements IExecutablePageStateAudit {
 															ada_compliance, 
 															Priority.HIGH,
 															recommendations,
-															labels, null);
+															labels,
+															categories);
 			
 			observations.add(observation_service.save(observation));
 		}
@@ -320,7 +349,7 @@ public class LinksAudit implements IExecutablePageStateAudit {
 						 score,
 						 observations,
 						 AuditLevel.PAGE,
-						 link_elements.size()*5,
+						 link_elements.size() * MAX_POINTS_EACH,
 						 page_state.getUrl()); 
 		//the contstant 6 in this equation is the exact number of boolean checks for this audit
 	}
